// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Button click event 1`] = `
<Button
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Button"
  onClick={[MockFunction]}
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button ripple"
      disabled={false}
      id="Button-0"
      onClick={[Function]}
      style={Object {}}
      visible={true}
    >
      <div
        className="ui-button ripple sc-EHOje jQdaQk"
        disabled={false}
        id="Button-0"
        onClick={[Function]}
        style={Object {}}
      >
        <Icon
          bottom=""
          className=""
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          errorMessage=""
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Icon"
          padding=""
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.i
              bottom=""
              className="ui-icon fa fa-fw fa-bomb"
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              errorMessage=""
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="Icon"
              padding=""
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              tooltip=""
              top=""
              visible={true}
              width=""
              xcss={null}
            >
              <i
                className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                contentEditable={false}
                direction="right"
                disabled={false}
                height=""
                id=""
                selected={false}
                style={Object {}}
                width=""
              />
            </styled.i>
          </ThemeProvider>
        </Icon>
      </div>
    </styled.div>
  </ThemeProvider>
</Button>
`;

exports[`Test creation of a Button control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-button ripple test-class"
    disabled={false}
    id="Button-0"
    onClick={[Function]}
    style={Object {}}
    visible={true}
  >
    <Icon
      bottom=""
      className=""
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      errorMessage=""
      focus={false}
      height=""
      iconName="bomb"
      id=""
      imageFile=""
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Icon"
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      tooltip=""
      top=""
      visible={true}
      width=""
      xcss={null}
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Test creation of a Button control with custom icon, colors, and border 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-button ripple"
    disabled={false}
    id="Button-0"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "black",
        "borderColor": "green",
        "borderWidth": "2px",
        "color": "red",
      }
    }
    visible={true}
  >
    <Icon
      bottom=""
      className=""
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      errorMessage=""
      focus={false}
      height=""
      iconName="superpowers"
      id=""
      imageFile=""
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Icon"
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      tooltip=""
      top=""
      visible={true}
      width=""
      xcss={null}
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Test disabling of a Button 1`] = `
<Button
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Button"
  onClick={[MockFunction]}
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button nohover"
      disabled={true}
      id="Button-0"
      onClick={[Function]}
      style={Object {}}
      visible={true}
    >
      <div
        className="ui-button nohover sc-EHOje jWnGrY"
        disabled={true}
        id="Button-0"
        onClick={[Function]}
        style={Object {}}
      >
        <Icon
          bottom=""
          className=""
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          errorMessage=""
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Icon"
          padding=""
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.i
              bottom=""
              className="ui-icon fa fa-fw fa-bomb"
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              errorMessage=""
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="Icon"
              padding=""
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              tooltip=""
              top=""
              visible={true}
              width=""
              xcss={null}
            >
              <i
                className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                contentEditable={false}
                direction="right"
                disabled={false}
                height=""
                id=""
                selected={false}
                style={Object {}}
                width=""
              />
            </styled.i>
          </ThemeProvider>
        </Icon>
      </div>
    </styled.div>
  </ThemeProvider>
</Button>
`;

exports[`Test making a Button invisible 1`] = `
<Button
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Button"
  onClick={[MockFunction]}
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button ripple"
      disabled={false}
      id="Button-0"
      onClick={[Function]}
      style={Object {}}
      visible={false}
    >
      <div
        className="ui-button ripple sc-EHOje kJnGDV"
        disabled={false}
        id="Button-0"
        onClick={[Function]}
        style={Object {}}
      >
        <Icon
          bottom=""
          className=""
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          errorMessage=""
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Icon"
          padding=""
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.i
              bottom=""
              className="ui-icon fa fa-fw fa-bomb"
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              errorMessage=""
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="Icon"
              padding=""
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              tooltip=""
              top=""
              visible={true}
              width=""
              xcss={null}
            >
              <i
                className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                contentEditable={false}
                direction="right"
                disabled={false}
                height=""
                id=""
                selected={false}
                style={Object {}}
                width=""
              />
            </styled.i>
          </ThemeProvider>
        </Icon>
      </div>
    </styled.div>
  </ThemeProvider>
</Button>
`;

exports[`Test retrieval of Button props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "iconStyle": "",
  "id": "",
  "left": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "Button",
  "onClick": [Function],
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
